# drifting-infinity

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  drifting-infinity-gdd-v02.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/data/: antagonist.py  arena_objectives.py  armillary_effects_data.py  behaviour_profiles.py  cr_averages.py  encounter_multipliers.py  encounter_themes.py  enhancement_definitions.py  environments.py  feat_definitions.py  floor_affixes.py  lore_beats.py  lore_fragments.py  magic_item_ingest.py  monster_ingest.py  open5e_client.py  reward_pool.py  role_classifier.py  secret_events.py  setting_overview.py  signature_builder.py  social_encounters.py  spell_ingest.py  xp_thresholds.py
backend/app/engine/: dice.py  leveling.py  scaling.py
backend/app/models/: arena.py  campaign.py  campaign_meta.py  character.py  economy.py  floor.py  gacha.py  inventory.py  magic_item.py  monster.py  run.py  snapshot.py  spell.py
backend/scripts/: encounter_dump.md  encounter_dump.py  encounter_test_report.md  encounter_test_runner.py  full_run_simulation.py  multi_run_report.md  multi_run_simulation.py  run_1_report.md  run_2_report.md  run_3_report.md  seed_demo_data.py  simulation_report.md  simulation_report_v2.md  simulation_report_v3.md
backend/tests/: conftest.py  test_api_campaigns.py  test_api_runs.py  test_armillary.py  test_combat_engine.py  test_difficulty_director.py  test_economy.py  test_gacha.py  test_leveling.py  test_meta_progression.py
(+218 files in other folders)
